k8s/base/zookeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: health-app
spec:
  replicas: 1
  selector:
    matchLabels: { app: zookeeper }
  template:
    metadata:
      labels: { app: zookeeper }
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.2.1
          ports:
            - containerPort: 2181
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - "echo srvr | nc localhost 2181 | grep Mode"
            initialDelaySeconds: 10
            periodSeconds: 10
