k8s/base/apigateway-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: health-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: shahharsh25/api-gateway:latest
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: health-app
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 9090
      targetPort: 9090
  type: ClusterIP
