k8s/base/appointment-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  namespace: health-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: shahharsh25/appointment-service:latest
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  namespace: health-app
spec:
  selector:
    app: appointment-service
  ports:
    - name: http
      port: 8085
      targetPort: 8085
  type: ClusterIP
