k8s/base/auth-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: health-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: shahharsh25/auth-service:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: health-app
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  type: ClusterIP
