k8s/base/cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra
  namespace: health-app
spec:
  ports:
    - port: 9042
  selector:
    app: cassandra
  clusterIP: None
