k8s/base/groupchat-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groupchat-service
  namespace: health-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: groupchat-service
  template:
    metadata:
      labels:
        app: groupchat-service
    spec:
      containers:
        - name: groupchat-service
          image: shahharsh25/groupchat-service:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: groupchat-service
  namespace: health-app
spec:
  selector:
    app: groupchat-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
  type: ClusterIP
