k8s/base/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: health-app
spec:
  ports:
    - port: 9092
  selector:
    app: kafka
  clusterIP: None
