k8s/base/messaging-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-service
  namespace: health-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-service
  template:
    metadata:
      labels:
        app: messaging-service
    spec:
      containers:
        - name: messaging-service
          image: shahharsh25/messaging-service:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
  namespace: health-app
spec:
  selector:
    app: messaging-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
  type: ClusterIP
