k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: health-app
spec:
  ports:
    - port: 6379
  selector:
    app: redis
