k8s/base/zookeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: health-app
spec:
  ports:
    - port: 2181
  selector:
    app: zookeeper
